--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Learn cybersecurity from fundamentals to elite pentesting with Abimel S B Kulumala's expert courses and mentorship." />
-    <title>ASBK 2999 - Cybersecurity Training & Mentorship</title>
+    <title>Cybersecurity Training & Mentorship</title>
   </head>
   <body class="antialiased text-white bg-background-dark">
     <div id="root"></div>
