--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo-sqr.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Learn cybersecurity from fundamentals to elite pentesting with Abimel S B Kulumala's expert courses and mentorship." />
-    <title>Cybersecurity Training & Mentorship</title>
+    <meta name="description" content="Learn cybersecurity from fundamentals to elite pentesting with Abimel S B Kulumala's Cybersecurity Essentials Program." />
+    <title>Cybersecurity Essentials Program - Training & Mentorship by Abimel SBK</title>
   </head>
   <body class="antialiased text-white bg-background-dark">
     <div id="root"></div>
